--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -103,3 +103,10 @@ bind -n M-J resize-pane -D 2
 set -g default-terminal "screen-256color"
 # tell Tmux that outside terminal supports true color
 set -ga terminal-overrides ",xterm-256color*:Tc"
+
+set -g default-terminal "screen-256color"
+# tell Tmux that outside terminal supports true color
+set -ga terminal-overrides ",xterm-256color*:Tc"
+
+# for tmux 3.2, you can use the following setting instead:
+set -as terminal-features ",xterm-256color:RGB"
