feat: improve tmux setup

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,112 +1,90 @@
+set -as terminal-features ",xterm-256color:RGB"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color*:Tc" # support true color
+set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color*:Tc"
+set-option -sa terminal-overrides ',xterm-256color*:RGB'
+
+set-option -g repeat-time 0
+set-option -sg escape-time 10
+
+setw -g mode-keys vi
+
+set-option -g default-shell /bin/zsh
+set-option -g default-command '/bin/zsh'
+
+set -g history-limit 50000
+
 # use C-a, since it's on the home row and easier to hit than C-b
 set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
 set -g base-index 1
 
-# Easy config reload
+set -g mouse on
+
+# keybinds
+# copy mode - prefix + [
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
-
-# mouse behavior
-# setw -g mode-mouse on
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-
-set-option -g default-terminal screen-256color
-set-option -g default-command '/bin/zsh'
-
-bind-key space next-window
+bind-key ^ last-window
 bind-key bspace previous-window
 bind-key enter next-layout
-
-# use vim-like keys for splits and windows
-bind-key v split-window -h
-bind-key s split-window -v
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+bind-key space next-window
 
-# Status Bar
-# set-option -g status-interval 1
-# set-option -g status-left 'be'
-# set-option -g status-fg default
+bind-key -r i run-shell "tmux popup -y 30 -w 100 -h 20 -E tmux-cht.sh"
 
-# Status Bar solarized-dark (default)
-# set-option -g status-bg black
+bind-key -r F run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r D run-shell "~/.local/bin/tmux-sessionizer ~/.homeshick/repos/dotfiles"
+bind-key -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/todo.md"
 
-# Status bar
-set -g status on
-set -g status-interval 5
-set -g status-justify left #centre # Careful! It is spelled centre not center.
-set -g status-style fg=white,bg=#444444
+#### PLUGINS
+# https://github.com/tmux-plugins/list
+# https://github.com/rothgar/awesome-tmux
+set -g @plugin 'tmux-plugins/tpm'
 
-# Highlight the current window.
-setw -g window-status-current-style fg=white
-setw -g window-status-current-style bg=#FD5B03
-setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
-# setw -g window-status-current-style attr=bright
+# requires `brew install urlview`, default keybind - u
+# https://github.com/tmux-plugins/tmux-urlview
+set -g @plugin 'tmux-plugins/tmux-urlview'
 
-#setw -g window-status-style 'fg=colour9 bg=colour18'
-setw -g window-status-format ' #I#[fg=silver]:#[fg=colour250]#W#[fg=colour244]#F '
+# toggle - prefix + shift + p
+# > ~/tmux-my-session-0-1-20140527T165614.log
+# screen capture - prefix + alt + p
+# > tmux-screen-capture-my-session-0-1-20140527T165614.log
+# save complete history - prefix + alt + shift + p
+# > tmux-history-my-session-0-1-20140527T165614.log
+# clear pane history - prefix + alt + c
+# Recommended: `brew install ansifilter`
+# https://github.com/tmux-plugins/tmux-logging
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @logging-path "~/tmux-logs"
 
-setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+# python3 -m pip install --user libtmux
+# https://github.com/ofirgall/tmux-window-name
+set -g @plugin 'ofirgall/tmux-window-name'
 
-# Status Bar Left side
-set -g status-left-length 50
-set -g status-left-style default
-set -g status-left ""
+# brew install fzf
+# search for text and copy it - prefix + tab
+# https://github.com/laktak/extrakto
+set -g @plugin 'laktak/extrakto'
 
-# Status Bar Right side
-set -g status-right-length 40
-set -g status-right-style default
-set -g status-right '#(date +%%H:%%M)'
+# switch tmux sessions - prefix + f
+# https://github.com/27medkamal/tmux-session-wizard
+set -g @plugin '27medkamal/tmux-session-wizard'
+set -g @session-wizard 'f'
 
-# Set window notifications
-setw -g monitor-activity on
-set -g visual-activity on
+# https://github.com/jimeh/tmux-themepack
+# requires powerline fonts
+# https://github.com/powerline/fonts
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/double/cyan'
 
-# Allow the arrow key to be used immediately after changing windows
-set-option -g repeat-time 0
-
-# Set to use ZSH
-set-option -g default-shell /bin/zsh
-
-# Set mouse scroll
-set -g mouse on
-
-# List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run -b '~/.tmux/plugins/tpm/tpm'
-
-set-option -sg escape-time 10
-set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',xterm-256color*:RGB'
-set-option -ga terminal-overrides ",xterm-256color*:Tc"
-
-# resize panes
-#―――――――――――――――――――――――――――――
-bind -n M-H resize-pane -L 2
-bind -n M-L resize-pane -R 2
-bind -n M-K resize-pane -U 2
-bind -n M-J resize-pane -D 2
-
-# colors
-set -g default-terminal "screen-256color"
-# tell Tmux that outside terminal supports true color
-set -ga terminal-overrides ",xterm-256color*:Tc"
-
-set -g default-terminal "screen-256color"
-# tell Tmux that outside terminal supports true color
-set -ga terminal-overrides ",xterm-256color*:Tc"
-
-# for tmux 3.2, you can use the following setting instead:
-set -as terminal-features ",xterm-256color:RGB"
+# initialize tpm, keep it at the bottom of file
+run '~/.tmux/plugins/tpm/tpm'
