chore: change tmux theme

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -84,7 +84,7 @@ set -g @session-wizard 'f'
 # requires powerline fonts
 # https://github.com/powerline/fonts
 set -g @plugin 'jimeh/tmux-themepack'
-set -g @themepack 'powerline/double/cyan'
+set -g @themepack 'powerline/double/blue'
 
 # initialize tpm, keep it at the bottom of file
 run '~/.tmux/plugins/tpm/tpm'
