--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -40,8 +40,7 @@ bind-key l select-pane -R
 bind-key space next-window
 
 bind-key -r i run-shell "tmux popup -y 30 -w 100 -h 20 -E tmux-cht.sh"
-
-bind-key -r F run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r D run-shell "~/.local/bin/tmux-sessionizer ~/.homeshick/repos/dotfiles"
 bind-key -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/todo.md"
 
@@ -78,7 +77,7 @@ set -g @plugin 'laktak/extrakto'
 # switch tmux sessions - prefix + f
 # https://github.com/27medkamal/tmux-session-wizard
 set -g @plugin '27medkamal/tmux-session-wizard'
-set -g @session-wizard 'f'
+set -g @session-wizard 'e'
 
 # https://github.com/jimeh/tmux-themepack
 # requires powerline fonts
