--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -87,3 +87,9 @@ set -g @themepack 'powerline/double/blue'
 
 # initialize tpm, keep it at the bottom of file
 run '~/.tmux/plugins/tpm/tpm'
+
+# switch panes using Alt-HJKL
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
