--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -93,3 +93,5 @@ bind -n M-h select-pane -L
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
+bind -n M-H previous-window
+bind -n M-L next-window
