--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -71,6 +71,7 @@ bindsym $mod+Shift+q kill
 bindsym $mod+Shift+d exec --no-startup-id dmenu_run
 
 exec --no-startup-id "albert"
+exec --no-startup-id "nextcloud"
 bindsym $mod+d exec --no-startup-id "albert show"
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
