fix(i3): i3status kill command

--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -35,7 +35,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 set $i3status_command notify-send starting i3status && i3status -c ~/.config/i3status/config
-set $refresh_i3status notify-send killing i3status; killall -SIGUSR1 $i3status_command
+set $refresh_i3status killall -SIGUSR1 $i3status_command
 
 # Use pactl to adjust volume in PulseAudio.
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
