--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -34,6 +34,8 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
+exec setxkbmap lv -variant apostrophe
+
 set $i3status_command notify-send starting i3status && i3status -c ~/.config/i3status/config
 set $refresh_i3status killall -SIGUSR1 $i3status_command
 
