feat(nvim): option to disable automatic formatting

--- a/nvim/.config/nvim/.luarc.json
+++ b/nvim/.config/nvim/.luarc.json
@@ -2,6 +2,7 @@
     "diagnostics.globals": [
         "vim",
         "events",
-        "CONFIG_TEST_COMMANDS"
+        "CONFIG_TEST_COMMANDS",
+        "CONFIG_DISABLE_FORMATTING"
     ]
 }
