fix: tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,7 +41,7 @@ bind-key space next-window
 
 bind-key -r i run-shell "tmux popup -y 30 -w 100 -h 20 -E tmux-cht.sh"
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
-bind-key -r D run-shell "~/.local/bin/tmux-sessionizer ~/.homeshick/repos/dotfiles"
+bind-key -r D run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
 bind-key -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/todo.md"
 
 #### PLUGINS
