--- a/nvim/.config/nvim/snippets/package.json
+++ b/nvim/.config/nvim/snippets/package.json
@@ -2,8 +2,18 @@
   "name": "personal-snippets",
   "contributes": {
     "snippets": [
-      { "language": "go", "path": "./go.json" },
-      { "language": "lua", "path": "./lua.json" }
+      {
+        "language": "go",
+        "path": "./go.json"
+      },
+      {
+        "language": "lua",
+        "path": "./lua.json"
+      },
+      {
+        "language": "php",
+        "path": "./php.json"
+      }
     ]
   }
 }
