--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -102,28 +102,32 @@ alt-shift-minus = 'resize smart -50'
 alt-shift-equal = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands.html#workspace
-alt-a = 'workspace www'
-alt-s = 'workspace dev'
-alt-d = 'workspace 3'
-alt-z = 'workspace 4'
-alt-x = 'workspace 5'
-alt-c = 'workspace 6'
+alt-a = 'workspace dev'
+alt-s = 'workspace dev-2'
+alt-d = 'workspace dev-3'
+alt-f = 'workspace http'
+alt-w = 'workspace www'
+alt-z = 'workspace todo'
+alt-x = 'workspace db'
+alt-c = 'workspace comms'
 alt-v = 'workspace 7'
 alt-b = 'workspace 8'
-alt-n = 'workspace Notes'
-alt-m = 'workspace Comms'
+alt-n = 'workspace notes'
+alt-m = 'workspace music'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands.html#move-node-to-workspace
-alt-shift-a = 'move-node-to-workspace www'
-alt-shift-s = 'move-node-to-workspace dev'
-alt-shift-d = 'move-node-to-workspace 3'
-alt-shift-z = 'move-node-to-workspace 4'
-alt-shift-x = 'move-node-to-workspace 5'
-alt-shift-c = 'move-node-to-workspace 6'
+alt-shift-a = 'move-node-to-workspace dev'
+alt-shift-s = 'move-node-to-workspace dev-2'
+alt-shift-d = 'move-node-to-workspace dev-3'
+alt-shift-f = 'move-node-to-workspace http'
+alt-shift-w = 'move-node-to-workspace www'
+alt-shift-z = 'move-node-to-workspace todo'
+alt-shift-x = 'move-node-to-workspace db'
+alt-shift-c = 'move-node-to-workspace comms'
 alt-shift-v = 'move-node-to-workspace 7'
 alt-shift-b = 'move-node-to-workspace 8'
-alt-shift-n = 'move-node-to-workspace Notes'
-alt-shift-m = 'move-node-to-workspace Comms'
+alt-shift-n = 'move-node-to-workspace notes'
+alt-shift-m = 'move-node-to-workspace music'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands.html#workspace-back-and-forth
 alt-tab = 'workspace-back-and-forth'
