feat(aerospace): add another workspace

--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -107,6 +107,7 @@ alt-s = 'workspace dev-2'
 alt-d = 'workspace dev-3'
 alt-f = 'workspace http'
 alt-w = 'workspace www'
+alt-e = 'workspace www2'
 alt-z = 'workspace todo'
 alt-x = 'workspace db'
 alt-c = 'workspace comms'
@@ -121,6 +122,7 @@ alt-shift-s = 'move-node-to-workspace dev-2'
 alt-shift-d = 'move-node-to-workspace dev-3'
 alt-shift-f = 'move-node-to-workspace http'
 alt-shift-w = 'move-node-to-workspace www'
+alt-shift-e = 'move-node-to-workspace www2'
 alt-shift-z = 'move-node-to-workspace todo'
 alt-shift-x = 'move-node-to-workspace db'
 alt-shift-c = 'move-node-to-workspace comms'
