--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,6 +44,30 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r D run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
 bind-key -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/todo.md"
 
+# Toggle panes with state preservation (Alt key combinations)
+# Toggle AI tools pane with menu - Alt+A
+bind-key -n M-a run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_name}' ~/.dotfiles/tmux/toggle-pane.sh '~/.dotfiles/tmux/ai-menu-pane.sh' 'ai_tools'"
+
+# Toggle zsh shell pane - Alt+S  
+bind-key -n M-s run-shell "~/.dotfiles/tmux/toggle-pane.sh '' 'zsh_s'"
+
+# Toggle zsh shell pane - Alt+T
+bind-key -n M-t run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_name}' ~/.dotfiles/tmux/toggle-pane.sh '' 'zsh_t'"
+
+# Toggle file watcher pane - Alt+W
+bind-key -n M-w run-shell "~/.dotfiles/tmux/toggle-pane.sh 'watch -n 1 \"ls -la\"' 'files'"
+
+# Toggle network monitor pane - Alt+N
+bind-key -n M-n run-shell "~/.dotfiles/tmux/toggle-pane.sh 'watch -n 1 \"ss -tuln\"' 'network'"
+
+# Toggle process monitor pane - Alt+P
+bind-key -n M-p run-shell "~/.dotfiles/tmux/toggle-pane.sh 'watch -n 1 \"ps aux --sort=-%cpu | head -20\"' 'processes'"
+
+# File jump - Alt+G (go to file:line in neovim pane)
+# Works from copy mode - position cursor on line with file:line and press Alt+G
+# Set DEBUG=1 to enable debug logging
+bind-key -T copy-mode-vi M-g run-shell "~/.dotfiles/tmux/file-jump.sh"
+
 #### PLUGINS
 # https://github.com/tmux-plugins/list
 # https://github.com/rothgar/awesome-tmux
@@ -95,3 +119,7 @@ bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 bind -n M-H previous-window
 bind -n M-L next-window
+
+
+bind-key ! break-pane -d -n _hidden_pane
+bind-key @ join-pane -s $.0
