fix(tmux): change keybinds to be more mac friendly

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,22 +46,13 @@ bind-key -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md |
 
 # Toggle panes with state preservation (Alt key combinations)
 # Toggle AI tools pane with menu - Alt+A
-bind-key -n M-a run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_name}' ~/.dotfiles/tmux/toggle-pane.sh '~/.dotfiles/tmux/ai-menu-pane.sh' 'ai_tools'"
+bind-key -r a run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_name}' ~/.dotfiles/tmux/toggle-pane.sh '~/.dotfiles/tmux/ai-menu-pane.sh' 'ai_tools'"
 
 # Toggle zsh shell pane - Alt+S  
-bind-key -n M-s run-shell "~/.dotfiles/tmux/toggle-pane.sh '' 'zsh_s'"
+bind-key -r s run-shell "~/.dotfiles/tmux/toggle-pane.sh '' 'zsh_s'"
 
 # Toggle zsh shell pane - Alt+T
-bind-key -n M-t run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_name}' ~/.dotfiles/tmux/toggle-pane.sh '' 'zsh_t'"
-
-# Toggle file watcher pane - Alt+W
-bind-key -n M-w run-shell "~/.dotfiles/tmux/toggle-pane.sh 'watch -n 1 \"ls -la\"' 'files'"
-
-# Toggle network monitor pane - Alt+N
-bind-key -n M-n run-shell "~/.dotfiles/tmux/toggle-pane.sh 'watch -n 1 \"ss -tuln\"' 'network'"
-
-# Toggle process monitor pane - Alt+P
-bind-key -n M-p run-shell "~/.dotfiles/tmux/toggle-pane.sh 'watch -n 1 \"ps aux --sort=-%cpu | head -20\"' 'processes'"
+bind-key -r t run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_name}' ~/.dotfiles/tmux/toggle-pane.sh '' 'zsh_t'"
 
 # File jump - Alt+G (go to file:line in neovim pane)
 # Works from copy mode - position cursor on line with file:line and press Alt+G
