--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,18 +46,18 @@ bind-key -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md |
 
 # Toggle panes with state preservation (Alt key combinations)
 # Toggle AI tools pane with menu - Alt+A
-bind-key -r a run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_name}' ~/.dotfiles/tmux/toggle-pane.sh '~/.dotfiles/tmux/ai-menu-pane.sh' 'ai_tools'"
+bind-key -r a run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_id}' ~/.tmux/scripts/toggle-pane.sh '~/.tmux/scripts/ai-menu-pane.sh' 'ai_tools'"
 
 # Toggle zsh shell pane - Alt+S  
-bind-key -r s run-shell "~/.dotfiles/tmux/toggle-pane.sh '' 'zsh_s'"
+bind-key -r s run-shell "~/.tmux/scripts/toggle-pane.sh '' 'zsh_s'"
 
 # Toggle zsh shell pane - Alt+T
-bind-key -r t run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_name}' ~/.dotfiles/tmux/toggle-pane.sh '' 'zsh_t'"
+bind-key -r t run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_id}' ~/.tmux/scripts/toggle-pane.sh '' 'zsh_t'"
 
 # File jump - Alt+G (go to file:line in neovim pane)
 # Works from copy mode - position cursor on line with file:line and press Alt+G
 # Set DEBUG=1 to enable debug logging
-bind-key -T copy-mode-vi M-g run-shell "~/.dotfiles/tmux/file-jump.sh"
+bind-key -T copy-mode-vi C-g run-shell "~/.tmux/scripts/file-jump.sh"
 
 #### PLUGINS
 # https://github.com/tmux-plugins/list
