feat(tmux): copy text to ai pane

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,10 +54,14 @@ bind-key -r s run-shell "~/.tmux/scripts/toggle-pane.sh '' 'zsh_s'"
 # Toggle zsh shell pane - Alt+T
 bind-key -r t run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_id}' ~/.tmux/scripts/toggle-pane.sh '' 'zsh_t'"
 
-# File jump - Alt+G (go to file:line in neovim pane)
-# Works from copy mode - position cursor on line with file:line and press Alt+G
+# File jump - Ctrl+G (go to file:line in neovim pane)
+# Works from copy mode - position cursor on line with file:line and press Ctrl+G
 # Set DEBUG=1 to enable debug logging
 bind-key -T copy-mode-vi C-g run-shell "~/.tmux/scripts/file-jump.sh"
+
+# Copy to AI - Ctrl+A (send selected text to AI pane)
+# Works from copy mode - select text and press Ctrl+A to send to AI pane
+bind-key -T copy-mode-vi C-a run-shell "~/.tmux/scripts/copy-to-ai.sh"
 
 #### PLUGINS
 # https://github.com/tmux-plugins/list
