fix(tmux): copy to ai

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,9 +59,9 @@ bind-key -r t run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_id
 # Set DEBUG=1 to enable debug logging
 bind-key -T copy-mode-vi C-g run-shell "~/.tmux/scripts/file-jump.sh"
 
-# Copy to AI - Ctrl+A (send selected text to AI pane)
-# Works from copy mode - select text and press Ctrl+A to send to AI pane
-bind-key -T copy-mode-vi C-a run-shell "~/.tmux/scripts/copy-to-ai.sh"
+# Copy to AI - = (send selected text to AI pane)
+# Works from copy mode - select text and press = to send to AI pane
+bind-key -T copy-mode-vi = run-shell "~/.tmux/scripts/copy-to-ai.sh"
 
 #### PLUGINS
 # https://github.com/tmux-plugins/list
