--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,7 +26,7 @@ set -g mouse on
 # keybinds
 # copy mode - prefix + [
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard'
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
