feat: various nvim and tmux features

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,6 +44,12 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r D run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
 bind-key -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/todo.md"
 
+# Toggle panes with state preservation (C-a H/J/K/L with shift)
+bind-key 'H' run-shell "DEBUG=1 ~/.local/bin/tmux-toggle 1"
+bind-key 'J' run-shell "DEBUG=1 ~/.local/bin/tmux-toggle 2"
+bind-key 'K' run-shell "DEBUG=1 ~/.local/bin/tmux-toggle 3"
+bind-key 'L' run-shell "DEBUG=1 ~/.local/bin/tmux-toggle 4"
+
 # Toggle panes with state preservation (Alt key combinations)
 # Toggle AI tools pane with menu - Alt+A
 bind-key -r a run-shell "TMUX_SESSION='#{session_name}' TMUX_WINDOW='#{window_id}' ~/.tmux/scripts/toggle-pane.sh '~/.tmux/scripts/ai-menu-pane.sh' 'ai_tools'"
