fix(tmux): gitignore local bin

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,9 @@ gtk/.config/gtk-3.0/bookmarks
 tmux/.tmux/plugins/*
 !tmux/.tmux/plugins/tpm
 
+tmux/.local/bin
+!tmux/.local/bin/tmux-cht.sh
+!tmux/.local/bin/tmux-sessionizer
+!tmux/.local/bin/tmux-windowizer
+
 *.swp
